# loomwood

./: CMakeLists.txt  README.md
assets/ui/: main_menu.rcss  main_menu.rml
cmake/: FindDependencies.cmake  GrepAssets.cmake  GrepConfig.cmake  GrepConfigs.cmake
cmake/Modules/: FindEnTT.cmake  FindFreetype.cmake  FindRmlUi.cmake  FindSDL3.cmake
config/: log.toml
configs/: language.toml  window.toml
doc/: game-design-doc.md
include/Engine/: Engine.hpp
include/engine/: Engine.hpp  InputSystem.hpp  PhysicsSystem.hpp  RenderSystem.hpp  RmlRenderInterface.hpp  RmlSystemInterface.hpp  UiSystem.hpp  WindowService.hpp  components.hpp
include/log/: fatal.hpp  log.hpp
src/: CMakeLists.txt  main.cpp
src/Engine/: Engine.cpp
src/engine/: Engine.cpp  InputSystem.cpp  PhysicsSystem.cpp  RenderSystem.cpp  RmlRenderInterface.cpp  RmlSystemInterface.cpp  UiSystem.cpp  WindowService.cpp
src/log/: fatal.cpp  log.cpp
